<resources>
    <string name="app_name">Weather App</string>
    <string name="cloud">Cloud</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="feels_like">Feels Like</string>
    <string name="temperature">Temperature</string>
    <string name="city_name">City Name</string>
    <string name="enter_the_city_name">Enter the City name :</string>
    <string name="start">Start</string>
    <string name="history">History</string>
</resources>